<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="create_token">Create token</string>
    <string name="no_card_yet">No card yet</string>
    <string name="no_token">No token</string>
    <string name="token_null_message">Token was null</string>
    <string name="token_not_gotten">Unable to get token</string>
    <string name="sample_card">4123450131001381</string>
    <string name="sample_cvv">883</string>
    <string name="sample_month">01</string>
    <string name="sample_year">2020</string>
    <string name="no_transaction_yet">No transaction yet</string>
    <string name="amount_in_kobo">Amount in Kobo</string>
    <string name="org_filter">vznet</string>
    <string name="org_type">Church</string>
    <string name="app_name">Vomoz.NET</string>
    <string name="change_center">yes</string>
    <string name="prompt_mobile_phone_confirm">Confirm Mobile Phone</string>
    <string name="app_version">v2.1_03:11:17</string>
    <string name="prompt_email">Email</string>
    <string name="error_invalid_telephone_length">Invalid telephone number. Please enter in international format</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_password">Enter password here</string>
    <string name="prompt_forgot_email_password">Forgot Email/Password</string>
    <string name="prompt_account_number">Account Number</string>
    <string name="prompt_routing_number">Routing Number</string>
    <string name="action_sign_in">Login</string>
    <string name="action_next">Next</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_first_name">This firstname is invalid</string>
    <string name="error_invalid_last_name">This lastname is invalid</string>
    <string name="error_invalid_telephone">This telephone is invalid</string>
    <string name="error_invalid_organization">This organization is invalid</string>
    <string name="error_invalid_password">This password is too short (Must be at least 6 characters)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="my_profile">My Profile</string>
    <string name="my_contribution">Contributions</string>
    <string name="attendance">Attendance</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="radio_auto">Automatically mark attendance</string>
    <string name="radio_manual">Manually mark attendance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_confirmation_code">Confirmation Code</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_middle_name">Middle Name</string>
    <string name="prompt_primary_email">Primary Email</string>
    <string name="prompt_secondary_email">Secondary Email</string>
    <string name="prompt_mobile_phone">Mobile Phone</string>
    <string name="prompt_home_phone">Home Phone</string>
    <string name="prompt_additional_phone">Additional Phone</string>
    <string name="prompt_marital_status">Marital Status</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_birth_date">Birth Date</string>
    <string name="prompt_first_visit_date">First Visit Date</string>
    <string name="prompt_wedding_date">Wedding Date</string>
    <string name="prompt_member_since">Member Since</string>
    <string name="prompt_address1">Address Line 1</string>
    <string name="prompt_address2">Address Line 2</string>
    <string name="prompt_city">City/Town</string>
    <string name="prompt_state">State/Province</string>
    <string name="prompt_zip">Zip/Postal</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_occupation">Occupation</string>
    <string name="prompt_job_title">Job Title</string>
    <string name="prompt_employment_status">Employment Status</string>
    <string name="prompt_contact1_first_name">First Name</string>
    <string name="prompt_contact1_last_name">Last Name</string>
    <string name="prompt_contact1_phone">Phone Number</string>
    <string name="prompt_contact1_email">Email</string>
    <string name="my_address">My Address</string>
    <string name="prompt_contact2_first_name">First Name</string>
    <string name="prompt_contact2_last_name">Last Name</string>
    <string name="prompt_contact2_phone">Phone Number</string>
    <string name="prompt_contact2_email">Email</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_envelope_id">Envelope Id</string>
    <string name="prompt_cc_number">Card Number</string>
    <string name="prompt_cc_ccv">CCV</string>
    <string name="action_reset">Reset Password</string>
    <string name="title_activity_my_contributions">My Contributions</string>
    <string name="title_activity_give">Give</string>
    <string name="my_career">Career/Occupation</string>
    <string name="my_contacts">Emergency Contacts</string>
    <string name="my_contributions">Contributions History</string>
    <string name="manage_my_cards">Manage Cards</string>
    <string name="update_password">Reset Password</string>
    <string name="make_donation">Make a Donation</string>
    <string name="my_attendance">Attendance</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_item_detail">Give</string>
    <string name="title_activity_login">Login</string>
    <string name="action_connect">Connect</string>
    <string name="action_signoff">Sign Off</string>
    <string name="change_password">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="donation_center_arrays">
        <item>Change donation center</item>
        <item>Jesus House DC</item>
        <item>Jesus House Baltimore</item>
    </string-array>
    <string name="title_activity_generic">GenericActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>