<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context="com.vomozsystems.apps.android.vomozpay.MyPersonalInfoFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="First Contact"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="First Name" />

            <EditText
                android:id="@+id/edit_contact1_first_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_border"
                android:enabled="true"
                android:gravity="center_vertical"
                android:hint="@string/prompt_contact1_first_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="Last Name" />

            <EditText
                android:id="@+id/edit_contact1_last_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_border"
                android:enabled="true"
                android:gravity="center_vertical"
                android:hint="@string/prompt_contact1_last_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="Email" />

            <EditText
                android:id="@+id/edit_contact1_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_border"
                android:enabled="true"
                android:gravity="center_vertical"
                android:hint="@string/prompt_contact1_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="Phone Number" />

            <EditText
                android:id="@+id/edit_contact1_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_border"
                android:enabled="true"
                android:gravity="center_vertical"
                android:hint="@string/prompt_contact1_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="30dp"
                android:text="Second Contact"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="First Name" />

            <EditText
                android:id="@+id/edit_contact2_first_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_border"
                android:enabled="true"
                android:gravity="center_vertical"
                android:hint="@string/prompt_contact2_first_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="Last Name" />

            <EditText
                android:id="@+id/edit_contact2_last_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_border"
                android:enabled="true"
                android:gravity="center_vertical"
                android:hint="@string/prompt_contact2_last_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="Email" />

            <EditText
                android:id="@+id/edit_contact2_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_border"
                android:enabled="true"
                android:gravity="center_vertical"
                android:hint="@string/prompt_contact2_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="Phone Number" />

            <EditText
                android:id="@+id/edit_contact2_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_border"
                android:enabled="true"
                android:gravity="center_vertical"
                android:hint="@string/prompt_contact2_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="150dp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Data cannot be retrieved"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:visibility="gone" />
</FrameLayout>

